Use a favicon cache in ContentSuggestions

Using a cache for the favicon allows a synchronous callback for the
favicon fetch, allowing it to present a favicon during the fade-in
animation of the NTP.

Bug: 740571
Change-Id: Id387491ab977f6e39847ce0a6c03ad997682a4ee
Reviewed-on: https://chromium-review.googlesource.com/568149
Reviewed-by: Jean-François Geyelin <jif@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486330}
Former-commit-id: c593f6ad3ceb7b54a7eebc22ee8d15ba6aeaf206