ios/chrome/browser/content_suggestions/content_suggestions_mediator.mm
@@ -105,6 +105,7 @@ const NSInteger kMaxNumMostVisitedTiles = 8;
 - (instancetype)
 initWithContentService:(ntp_snippets::ContentSuggestionsService*)contentService
       largeIconService:(favicon::LargeIconService*)largeIconService
+        largeIconCache:(LargeIconCache*)largeIconCache
        mostVisitedSite:
            (std::unique_ptr<ntp_tiles::MostVisitedSites>)mostVisitedSites {
   self = [super init];
@@ -115,7 +116,8 @@ initWithContentService:(ntp_snippets::ContentSuggestionsService*)contentService
     _sectionInformationByCategory = [[NSMutableDictionary alloc] init];
     _faviconMediator = [[ContentSuggestionsFaviconMediator alloc]
         initWithContentService:contentService
-              largeIconService:largeIconService];
+              largeIconService:largeIconService
+                largeIconCache:largeIconCache];
 
     _mostVisitedSectionInfo = MostVisitedSectionInformation();
     _logoSectionInfo = LogoSectionInformation();
