ios/chrome/browser/ui/favicon/favicon_attributes_provider.h
@@ -14,6 +14,7 @@ class LargeIconService;
 }  // namespace favicon
 
 @class FaviconViewProvider;
+class LargeIconCache;
 class GURL;
 
 // Object to fetch favicon attributes by URL - an image or a fallback icon if
@@ -39,6 +40,10 @@ class GURL;
 @property(nonatomic, readonly) CGFloat minSize;
 // Expected favicon size (in points). Will downscale favicon to this.
 @property(nonatomic, readonly) CGFloat faviconSize;
+// Cache for the favicon. Using a cache makes the |completion| block to be
+// called synchronously and potentially multiple times. If this is null, no
+// cache is used.
+@property(nonatomic, assign) LargeIconCache* cache;
 
 @end
 
